spacing.scss: fix: use var from _variables

--- a/www/css/spacing.scss
+++ b/www/css/spacing.scss
@@ -1,7 +1,7 @@
-$spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
+@import './_variables.scss';
 
 .margin {
-  @each $i in $spacing-array {
+  @each $i in $spacing {
     &-#{$i} {
       margin: #{$i}px !important;
     }
@@ -9,7 +9,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
   $edges: (top, bottom, left, right);
   @each $e in $edges {
     &-#{$e} {
-      @each $i in $spacing-array {
+      @each $i in $spacing {
         &-#{$i} {
           margin-#{$e}: #{$i}px !important;
         }
@@ -17,7 +17,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
     }
   }
   &-tb {
-    @each $i in $spacing-array {
+    @each $i in $spacing {
       &-#{$i} {
         margin-top: #{$i}px !important;
         margin-bottom: #{$i}px !important;
@@ -25,7 +25,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
     } 
   }
   &-lr {
-    @each $i in $spacing-array {
+    @each $i in $spacing {
       &-#{$i} {
         margin-left: #{$i}px !important;
         margin-right: #{$i}px !important;
@@ -35,7 +35,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
 }
 
 .padding {
-  @each $i in $spacing-array {
+  @each $i in $spacing {
     &-#{$i} {
       padding: #{$i}px !important;
     }
@@ -43,7 +43,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
   $edges: (top, bottom, left, right);
   @each $e in $edges {
     &-#{$e} {
-      @each $i in $spacing-array {
+      @each $i in $spacing {
         &-#{$i} {
           padding-#{$e}: #{$i}px !important;
         }
@@ -51,7 +51,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
     }
   }
   &-tb {
-    @each $i in $spacing-array {
+    @each $i in $spacing {
       &-#{$i} {
         padding-top: #{$i}px !important;
         padding-bottom: #{$i}px !important;
@@ -59,7 +59,7 @@ $spacing-array: (0,5,8,10,12,15,16,18,20,25,30,35,40,45,50);
     } 
   }
   &-lr {
-    @each $i in $spacing-array {
+    @each $i in $spacing {
       &-#{$i} {
         padding-left: #{$i}px !important;
         padding-right: #{$i}px !important;
